<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EEG Lab reservation</string>
    <string name="app_overview">Agenda</string>
    <string name="app_details">Details</string>
    <string name="app_refresh">Refresh</string>
    <string name="app_settings">Settings</string>
    <string name="app_add_record">New reservation</string>
    <string name="app_about">About</string>
    <string name="app_about_description">This application is meant for booking the EEG/ERP
         Laboratory in the Department of Computer Science and Engineering at the University of West Bohemia.
        \n
        This application was created as a semestral project for subject of Mobile communication devices.</string>
    <string name="login_mail_suffix">\ @students.zcu.cz</string>
    <string name="login_protocol">https://</string>
    <string name="settings_url">Service URL</string>
    <string name="settings_username">Username</string>
    <string name="settings_password">Password</string>
    <string name="settings_saved">Settings saved.</string>
    <string name="main_date">Choose date</string>
    <string name="reservation_times">Reserved times</string>
    <string name="reservation_created">Reservation created.</string>
    <string name="reservation_edited">Reservation edited.</string>
    <string name="reservation_removed">Reservation removed.</string>
    <string name="reservation_removed_update">Reservation removed, please update view.</string>
    <string name="add_group_label">Research group</string>
    <string name="add_from_label">From time</string>
    <string name="add_to_label">To time</string>
    <string name="add_change">Change time</string>
    <string name="menu_save">Save</string>
    <string name="menu_discard">Discard</string>
    <string name="menu_login">Log In</string>
    <string name="working">Working</string>
    <string name="working_ws_msg">Ongoing communication with web service…</string>
    <string name="working_ws_login">Veryfing login information…</string>
    <string name="working_ws_groups">Downloading available research groups…</string>
    <string name="working_ws_create">Creating new record…</string>
    <string name="working_ws_edit">Editing record…</string>
    <string name="working_ws_remove">Removing record…</string>
    <string name="dummy_date">DATE</string>
    <string name="dummy_from">FROM</string>
    <string name="dummy_to">TO</string>
    <string name="error_offline">Connection is unavailable. Request could not be completed.</string>
    <string name="error_connection">Connection to server issues occurred. Try again later.</string>
	<string name="error_date_comparison">Reservation action cannot end before it even started!</string>
	<string name="error_unknown_host">Invalid host name/address!</string>
	<string name="error_invalid_password">Password must be entered!</string>
	<string name="error_invalid_url">Entered value is not invalid URL!</string>
	<string name="error_invalid_username">Username must be an email!</string>
	<string name="http_400">Application made invalid request towards server.</string>
	<string name="http_401">Invalid login information.</string>
	<string name="http_403">You do not have permissions for such request.</string>
	<string name="http_404">Resource URL not found.</string>
	<string name="http_405">Request method not allowed.</string>
	<string name="http_408">Request timed out.</string>
	<string name="http_500">Internal server error. Try again later.</string>
	<string name="http_503">Service is currently unavailable. Try again later.</string>
	<string name="logo">Logo</string>
	<string name="detail_group">Research group</string>
	<string name="dummy_group">Group name</string>
	<string name="detail_from">From time</string>
	<string name="detail_to">To time</string>
	<string name="detail_separator"> - </string>
	<string name="detail_creator">Creator</string>
	<string name="detail_empty">No reservation selected</string>
	<string name="detail_time">Time span</string>
	<string name="detail_contact">Contact</string>
	<string name="button_remove">Remove reservation</string>
	<string name="dialog_remove_header">Removing reservation</string>
	<string name="dialog_remove_body">Are you sure you want to remove this reservation?</string>
</resources>